@@ -1285,7 +1285,7 @@ saved_object_build_matrix (const char *oname, int idx,
     } else if (idx == M_VMA && smatch->type == GRETL_OBJ_VAR) {
 	M = gretl_VAR_get_vma_matrix(smatch->ptr, pdinfo, err);
     } else if (idx == M_FEVD && smatch->type == GRETL_OBJ_VAR) {
-	M = gretl_VAR_get_fevd_matrix(smatch->ptr, pdinfo, err);
+	M = gretl_VAR_get_full_FEVD_matrix(smatch->ptr, pdinfo, err);
     } else {
 	*err = E_BADSTAT;
     }
